@@ -1,0 +1,281 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u300a\u9ed1\u767d\u5927\u5eda\u300b\u5f15\u767c\u9810\u8a02\u71b1\u6f6e\uff01\u51a0\u8ecd\u9910\u5ef3\u9810\u8a02\u50f9\u683c\u98c6\u5347\u81f370\u842c\u97d3\u5143\uff0c\u53c3\u8cfd\u5eda\u5e2b\u9910\u5ef3\u88ab\u8a02\u6eff\u81f311\u6708", "description": "\u300a\u9ed1\u767d\u5927\u5eda\u300b\u5f15\u767c\u9810\u8a02\u71b1\u6f6e\uff01\u51a0\u8ecd\u9910\u5ef3\u9810\u8a02\u50f9\u683c\u98c6\u5347\u81f370\u842c\u97d3\u5143\uff0c\u53c3\u8cfd\u5eda\u5e2b\u9910\u5ef3\u88ab\u8a02\u6eff\u81f311\u6708", "url": "https://www.famechos.me/news/\u300a\u9ed1\u767d\u5927\u5eda\u300b\u5f15\u767c\u9810\u8a02\u71b1\u6f6e\uff01\u51a0\u8ecd\u9910\u5ef3\u9810\u8a02\u50f9\u683c\u98c6\u5347\u81f370\u842c\u97d3\u5143\uff0c\u53c3\u8cfd\u5eda\u5e2b\u9910\u5ef3\u88ab\u8a02\u6eff\u81f311\u6708.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T23:22:16.998281+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月.html"/>
+<meta name="description" content="《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月。了解最新消息和預訂詳情。">
+
+<meta name="keywords" content="黑白大廚, 預訂熱潮, 冠軍餐廳, 韓國美食, 餐廳預訂, 參賽廚師">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月.html" />
+        <meta property="og:title" content="《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月" />
+        <meta property="og:description" content="《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月" />
+        <meta property="twitter:description" content="《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>Netflix 節目《黑白大廚：料理階級大戰》的成功引發了預訂熱潮，參賽廚師的餐廳幾乎無法訂到位子。尤其是節目冠軍權聖晙（Kwon Sung-jun）所經營的拿坡里馬菲亞（Napoli Matfia）餐廳，預訂價格在黑市上飆升至高達 70 萬韓元（約 525 美元）。</p>
+<p>權聖晙在 Instagram 上分享了一張被炒賣的預訂截圖，並警告預訂轉賣者將被永久禁止使用應用程式，且不會退回訂金。到店時將會驗證預訂者是否是真正的訂位人。</p>
+<table>
+<tr>
+<th>餐廳名稱</th>
+<th>預訂狀況</th>
+</tr>
+<tr>
+<td>拿坡里馬菲亞（Napoli Matfia）</td>
+<td>預訂價格在黑市上飆升至高達 70 萬韓元（約 525 美元）</td>
+</tr>
+<tr>
+<td>鄭智宣的餐廳</td>
+<td>已經完全訂滿 10 月和 11 月，沒有等待名單可供選擇</td>
+</tr>
+<tr>
+<td>金泰成的餐廳</td>
+<td>已經訂滿至 11 月中旬，只有等待名單可供選擇</td>
+</tr>
+<tr>
+<td>趙光孝的餐廳</td>
+<td>每四天接受預訂一次，已經將下一次可用的時段和等待名單全部訂滿</td>
+</tr>
+<tr>
+<td>盧清萊的餐廳</td>
+<td>被預訂需求淹沒，使得顧客甚至難以通過電話聯繫到餐廳</td>
+</tr>
+</table>
+<p>根據 CATCHTABLE，節目播出後，搜索參賽廚師餐廳的次數增加了 74 倍，儲存的餐廳數量增加了高達 1900%。參賽廚師餐廳的平均預訂率增加了近 150%。</p>
+
+<p>資料來源：TheKoreaTimes</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/諾貝爾文學獎花落韓江！李敏金恭賀「亞洲第一女」揭露人類生命脆弱性.html">諾貝爾文學獎花落韓江！李敏金恭賀「亞洲第一女」揭露人類生命脆弱性</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持.html">RIIZE勝韓重返團隊引發粉絲抗議！元斌親自出面懇求粉絲支持</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國娛樂圈為韓江諾貝爾文學獎而沸騰！BTS成員V、RM等藝人紛紛恭賀.html">韓國娛樂圈為韓江諾貝爾文學獎而沸騰！BTS成員V、RM等藝人紛紛恭賀</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
