@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 23:21:26 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 23:22:32 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -267,5 +267,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>釜山國際電影節創下新紀錄。。釜山國際電影節（BIFF）結束為期十天的活動，創下觀眾人數的新紀錄。今年的電影節共有來自63個國家的224部電影參展，吸引了超過14.5萬名觀眾前往釜山觀影。。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 23:21:26 +0800</pubDate>
+</item><item>
+  <title>《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月</title>
+  <link>https://www.famechos.me/news/《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月.html</link>
+  <description>黑白大廚：料理階級大戰引發預訂熱潮。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 23:22:32 +0800</pubDate>
 </item></channel>
 </rss>
