@@ -266,4 +266,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/《黑白大廚》引發預訂熱潮！冠軍餐廳預訂價格飆升至70萬韓元，參賽廚師餐廳被訂滿至11月.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T23:22:32+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
